--- a/src/makefile
+++ b/src/makefile
@@ -1,5 +1,5 @@
-boot.bin: boot.asm
-	nasm -f bin boot.asm -o boot.bin
+%.bin: %.asm
+	nasm -f bin $< -o $@
 master.img: boot.bin
 	yes | bximage -q -hd=16 -func=create -sectsize=512 -imgmode=flat master.img
 	dd if=boot.bin of=master.img bs=512 count=1 conv=notrunc
